tests/baselines/reference/moduleAugmentationNoNewNames.errors.txt
map.ts(12,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== map.ts (1 errors) ====
    import { Observable } from "./observable"
    
    (<any>Observable.prototype).map = function() { }
    
    declare module "./observable" {
        interface Observable<T> {
            map<U>(proj: (e:T) => U): Observable<U>
        }
        class Bar {}
        let y: number, z: string;
        let {a: x, b: x1}: {a: number, b: number};
        module Z {}
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    }
    
==== observable.ts (0 errors) ====
    export declare class Observable<T> {
        filter(pred: (e:T) => boolean): Observable<T>;
    }
    
==== main.ts (0 errors) ====
    import { Observable } from "./observable"
    import "./map";
    
    let x: Observable<number>;
    let y = x.map(x => x + 1);